# Slack-Neo

./: .ruff.toml  Makefile  README.md  deploy.py  pyproject.toml
archer/: defaults.py  env.py  server.py  utils.py
archer/agent/: __init__.py  agent.py  base.py  utils.py
archer/listeners/: __init__.py
archer/listeners/actions/: __init__.py  auth_complete.py  auth_complete_button.py  user_settings.py
archer/listeners/events/: __init__.py  assistant.py  home_opened.py
archer/storage/: file.py  functions.py  schema.py
config/: manifest.json
